--- a/public/style/component/myCard.scss
+++ b/public/style/component/myCard.scss
@@ -3,6 +3,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 1rem 0 1.5rem 0;
+    min-height: 3rem;
     .card-title {
         color: #1890FF;
         font-size: 18px;
@@ -24,10 +25,6 @@
 
     .card-tags {
         display: inline-block;
-    }
-
-    img {
-        width: 100%;
     }
 
     .card-text {
