--- a/public/style/page/common.scss
+++ b/public/style/page/common.scss
@@ -1,6 +1,11 @@
 body{
     background-color: #f6f6f6;
 }
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 .content {
     margin-top: 3.5rem;
     .content-left {
@@ -8,6 +13,11 @@ body{
         min-height: 40vh;
         border-radius: 1rem;
         padding: .5rem;
+        
+        .article-menu {
+            padding-top: 2rem;
+            
+        }
     }
 
     .content-right {
@@ -16,4 +26,86 @@ body{
         margin-left: .6rem;
         border-radius: 1rem;
     }
+}
+
+pre{
+    display: block;
+    background-color:#f3f3f3;
+     padding: .5rem !important;
+     overflow-y: auto;
+     font-weight: 300;
+     font-family: Menlo, monospace;
+     border-radius: .3rem;
+}
+pre{
+    background-color: #283646 !important;
+}
+pre >code{
+    border:0px !important;
+    background-color: #283646 !important;
+    color:#FFF;
+
+}
+.anchor-fix h3 {
+    border-left: 3px solid rgb(156, 203, 250);
+    padding-left: .7rem;
+    transition: all .5s;
+    &:hover {
+        background: rgba(156, 203, 250, .5);
+    }
+}
+code {
+    display: inline-block ;
+    background-color:#f3f3f3;
+    border:1px solid #fdb9cc;
+    border-radius:3px;
+    font-size: 12px;
+    padding-left: 5px;
+    padding-right: 5px;
+    color:#4f4f4f;
+    margin: 0px 3px;
+}
+.title-anchor{
+    color:#888 !important;
+    padding:4px !important;
+    margin: 0rem !important;
+    height: auto !important;
+    line-height: 1.2rem !important;
+    font-size: .7rem !important;
+    border-bottom: 1px dashed #eee;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+}
+p > img {
+    width: 95%;
+    margin: 0 auto;
+}
+.active{
+    color:rgb(30, 144, 255) !important;
+}
+.nav-title{
+    text-align: center;
+    color: #888;
+    border-bottom: 1px solid rgb(30, 144, 255);
+
+}
+.article-menu{
+    font-size:12px;
+}
+iframe{
+    height: 34rem;
+}
+.detailed-content  img{
+    width: 100%;
+    border:1px solid #f3f3f3;
+}
+.title-level3{
+    display: none !important;
+}
+.ant-anchor-link-title{
+    font-size: 12px !important;
+}
+.ant-anchor-wrapper{
+    padding: 5px !important;
 }
